--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="author" content="Dashboard">
+  <meta name="author" content="Anwhere">
   <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
   <title>Anwhere's workstations</title>
 
@@ -60,7 +60,7 @@
       <div id="sidebar" class="nav-collapse ">
         <!-- sidebar menu start-->
         <ul class="sidebar-menu" id="nav-accordion">
-          <p class="centered"><a href="profile.html"><img src="img/mainphoto.jpg" class="img-circle" width="80"></a></p>
+          <p class="centered"><a href="#"><img src="img/mainphoto.jpg" class="img-circle" width="80"></a></p>
           <h5 class="centered">Anwhere Jin</h5>
           <li class="mt">
             <a class="active" href="index.html">
@@ -74,10 +74,10 @@
               <span>任务Review</span>
               </a>
             <ul class="sub">
-              <li><a href="general.html">General</a></li>
-              <li><a href="buttons.html">Buttons</a></li>
-              <li><a href="panels.html">Panels</a></li>
-              <li><a href="font_awesome.html">Font Awesome</a></li>
+              <li><a href="#">General</a></li>
+              <li><a href="#">Buttons</a></li>
+              <li><a href="#">Panels</a></li>
+              <li><a href="#">Font Awesome</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -86,13 +86,13 @@
               <span>事件Events</span>
               </a>
             <ul class="sub">
-              <li><a href="grids.html">Grids</a></li>
-              <li><a href="calendar.html">Calendar</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="todo_list.html">Todo List</a></li>
-              <li><a href="dropzone.html">Dropzone File Upload</a></li>
-              <li><a href="inline_editor.html">Inline Editor</a></li>
-              <li><a href="file_upload.html">Multiple File Upload</a></li>
+              <li><a href="#">Grids</a></li>
+              <li><a href="#">Calendar</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Todo List</a></li>
+              <li><a href="#">Dropzone File Upload</a></li>
+              <li><a href="#">Inline Editor</a></li>
+              <li><a href="#">Multiple File Upload</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -101,15 +101,15 @@
               <span>相关文档</span>
               </a>
             <ul class="sub">
-              <li><a href="blank.html">Blank Page</a></li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="lock_screen.html">Lock Screen</a></li>
-              <li><a href="profile.html">Profile</a></li>
-              <li><a href="invoice.html">Invoice</a></li>
-              <li><a href="pricing_table.html">Pricing Table</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-              <li><a href="404.html">404 Error</a></li>
-              <li><a href="500.html">500 Error</a></li>
+              <li><a href="#">Blank Page</a></li>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Lock Screen</a></li>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Invoice</a></li>
+              <li><a href="#">Pricing Table</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">404 Error</a></li>
+              <li><a href="#">500 Error</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -118,9 +118,9 @@
               <span>介绍</span>
               </a>
             <ul class="sub">
-              <li><a href="form_component.html">Form Components</a></li>
-              <li><a href="advanced_form_components.html">Advanced Components</a></li>
-              <li><a href="form_validation.html">Form Validation</a></li>
+              <li><a href="#">Form Components</a></li>
+              <li><a href="#">Advanced Components</a></li>
+              <li><a href="#">Form Validation</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -129,9 +129,9 @@
               <span>联系我们</span>
               </a>
             <ul class="sub">
-              <li><a href="basic_table.html">Basic Table</a></li>
-              <li><a href="responsive_table.html">Responsive Table</a></li>
-              <li><a href="advanced_table.html">Advanced Table</a></li>
+              <li><a href="index.html#">Basic Table</a></li>
+              <li><a href="#">Responsive Table</a></li>
+              <li><a href="#">Advanced Table</a></li>
             </ul>
           </li>
         </ul>
