V201812131803 update website file

--- a/index.html
+++ b/index.html
@@ -143,12 +143,65 @@
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
     <!--main content start-->
-    <section id="main-content">
-      <section class="wrapper">
-        <div class="row">
-         
-         
+    <section id="main-content" >
+      <section class="wrapper ">
+        <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-6 mt">
+                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+                <hr>
+                <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
+                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
+                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+              </div>
+
+              <div class="col-md-6 centered">
+                <img src="img/ny.jpg" width="300">
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+
+              <div class="col-md-6 mt">
+                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+                <hr>
+                <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
+                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
+                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+              </div>
+
+              <div class="col-md-6 centered">
+                <img src="img/portfolio/port01.jpg" width="300">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-6 mt">
+                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+                <hr>
+                <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
+                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
+                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+              </div>
+
+              <div class="col-md-6 centered">
+                <img src="img/ny.jpg" width="300">
+              </div>
+              <br>
+              <br>
+            </div>
+          </div>
+        </div>
+
         <!-- /row -->
       </section>
     </section>
