--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="Anwhere">
-  <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
-  <title>Anwhere's workstations</title>
+  <meta name="keyword" content="Anwhere, Studio,Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
+  <title>Anwhere Studio</title>
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -74,7 +74,7 @@
               <span>任务Review</span>
               </a>
             <ul class="sub">
-              <li><a href="#">General</a></li>
+              <li><a href="general.html">Visualization</a></li>
               <li><a href="#">Buttons</a></li>
               <li><a href="#">Panels</a></li>
               <li><a href="#">Font Awesome</a></li>
@@ -148,16 +148,16 @@
         <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
-              <div class="col-md-6 mt">
-                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+              <div class="col-md-8 mt">
+                <h3>MessyCurveDraw 飞线作画的实现<br>Processing &amp; Visualization</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
-                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
-                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+                <p class="mt">在OpenProcessing上有许多非常值得学习的processing作品，非常惊喜看到了之前在公众号坏打印机分享的飞线作画实例，有兴趣研究的可以去公众号文章去看看，有详细的解决过程，在OpenProcessing上有作者郑越升Sen先生的作品展示和P5源码，在这里做一个分享以及Processing Java的转换实现</p>
+                <p class="mt"><button class="btn btn-sm btn-trans"><a href="visualizationessay/visualization1217.html">更多详情</a></button></p>
               </div>
 
-              <div class="col-md-6 centered">
-                <img src="img/ny.jpg" width="300">
+              <div class="col-md-4 centered">
+                <img src="img/visual/messydraw01.jpg" width="300">
               </div>
             </div>
           </div>
@@ -166,17 +166,16 @@
         <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
-
-              <div class="col-md-6 mt">
-                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+              <div class="col-md-8 mt">
+                <h3>MessyCurveDraw 飞线作画的实现<br>Processing &amp; Visualization</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
-                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
-                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+                <p class="mt">在OpenProcessing上有许多非常值得学习的processing作品，非常惊喜看到了之前在公众号坏打印机分享的飞线作画实例，有兴趣研究的可以去公众号文章去看看，有详细的解决过程，在OpenProcessing上有作者郑越升Sen先生的作品展示和P5源码，在这里做一个分享以及Processing Java的转换实现</p>
+                <p class="mt"><button class="btn btn-sm btn-trans"><a href="visualizationessay/visualization1217.html">更多详情</a></button></p>
               </div>
 
-              <div class="col-md-6 centered">
-                <img src="img/portfolio/port01.jpg" width="300">
+              <div class="col-md-4 centered">
+                <img src="img/visual/messydraw01.jpg" width="300">
               </div>
             </div>
           </div>
@@ -185,19 +184,17 @@
         <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
-              <div class="col-md-6 mt">
-                <h3>中文测试中文测试中文测试!<br>中文测试 &amp; 测试</h3>
+              <div class="col-md-8 mt">
+                <h3>MessyCurveDraw 飞线作画的实现<br>Processing &amp; Visualization</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
-                <p class="mt">德雷梅斯特的老板马库斯·卢基告诉德国《soesteranzeiger》报刊的记者，如果泄漏发生在离圣诞节更近时，那将是一场灾难”。卢基补充说，工厂将在周三恢复正常运转。据报道，大约25名消防员在现场帮忙做清理工作…</p>
-                <p class="mt"><button class="btn btn-sm btn-trans">更多详情</button></p>
+                <p class="mt">在OpenProcessing上有许多非常值得学习的processing作品，非常惊喜看到了之前在公众号坏打印机分享的飞线作画实例，有兴趣研究的可以去公众号文章去看看，有详细的解决过程，在OpenProcessing上有作者郑越升Sen先生的作品展示和P5源码，在这里做一个分享以及Processing Java的转换实现</p>
+                <p class="mt"><button class="btn btn-sm btn-trans"><a href="visualizationessay/visualization1217.html">更多详情</a></button></p>
               </div>
 
-              <div class="col-md-6 centered">
-                <img src="img/ny.jpg" width="300">
+              <div class="col-md-4 centered">
+                <img src="img/visual/messydraw01.jpg" width="300">
               </div>
-              <br>
-              <br>
             </div>
           </div>
         </div>
