V201812191739 add two essay

--- a/general.html
+++ b/general.html
@@ -73,9 +73,9 @@
               </a>
             <ul class="sub">
               <li class="active"><a href="general.html">Visualization</a></li>
-              <li><a href="#">Buttons</a></li>
-              <li><a href="#">Panels</a></li>
-              <li><a href="#">Font Awesome</a></li>
+              <li><a href="valuable.html">Valuable</a></li>
+              <li><a href="frontend.html">Frontend</a></li>
+              <li><a href="backend.html">Backend</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -84,13 +84,13 @@
               <span>事件Events</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Grids</a></li>
-              <li><a href="#">Calendar</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Todo List</a></li>
-              <li><a href="#">Dropzone File Upload</a></li>
-              <li><a href="#">Inline Editor</a></li>
-              <li><a href="#">Multiple File Upload</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
+              <li><a href="#">Blank04</a></li>
+              <li><a href="#">Blank05</a></li>
+              <li><a href="#">Blank06</a></li>
+              <li><a href="#">Blank07</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -99,15 +99,15 @@
               <span>相关文档</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Blank Page</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Lock Screen</a></li>
-              <li><a href="#">Profile</a></li>
-              <li><a href="#">Invoice</a></li>
-              <li><a href="#">Pricing Table</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">404 Error</a></li>
-              <li><a href="#">500 Error</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
+              <li><a href="#">Blank04</a></li>
+              <li><a href="#">Blank05</a></li>
+              <li><a href="#">Blank06</a></li>
+              <li><a href="#">Blank07</a></li>
+              <li><a href="#">Blank08</a></li>
+              <li><a href="#">Blank09</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -116,9 +116,9 @@
               <span>介绍</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Form Components</a></li>
-              <li><a href="#">Advanced Components</a></li>
-              <li><a href="#">Form Validation</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -127,9 +127,9 @@
               <span>联系我们</span>
               </a>
             <ul class="sub">
-              <li><a href="index.html#">Basic Table</a></li>
-              <li><a href="#">Responsive Table</a></li>
-              <li><a href="#">Advanced Table</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
             </ul>
           </li>
         </ul>
