--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
               </a>
             <ul class="sub">
               <li><a href="general.html">Visualization</a></li>
-              <li><a href="#">Buttons</a></li>
-              <li><a href="#">Panels</a></li>
-              <li><a href="#">Font Awesome</a></li>
+              <li><a href="valuable.html">Valuable</a></li>
+              <li><a href="frontend.html">Frontend</a></li>
+              <li><a href="backend.html">Backend</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -86,13 +86,13 @@
               <span>事件Events</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Grids</a></li>
-              <li><a href="#">Calendar</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Todo List</a></li>
-              <li><a href="#">Dropzone File Upload</a></li>
-              <li><a href="#">Inline Editor</a></li>
-              <li><a href="#">Multiple File Upload</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
+              <li><a href="#">Blank04</a></li>
+              <li><a href="#">Blank05</a></li>
+              <li><a href="#">Blank06</a></li>
+              <li><a href="#">Blank07</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -101,15 +101,15 @@
               <span>相关文档</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Blank Page</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Lock Screen</a></li>
-              <li><a href="#">Profile</a></li>
-              <li><a href="#">Invoice</a></li>
-              <li><a href="#">Pricing Table</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">404 Error</a></li>
-              <li><a href="#">500 Error</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
+              <li><a href="#">Blank04</a></li>
+              <li><a href="#">Blank05</a></li>
+              <li><a href="#">Blank06</a></li>
+              <li><a href="#">Blank07</a></li>
+              <li><a href="#">Blank08</a></li>
+              <li><a href="#">Blank09</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -118,9 +118,9 @@
               <span>介绍</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Form Components</a></li>
-              <li><a href="#">Advanced Components</a></li>
-              <li><a href="#">Form Validation</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -129,9 +129,9 @@
               <span>联系我们</span>
               </a>
             <ul class="sub">
-              <li><a href="index.html#">Basic Table</a></li>
-              <li><a href="#">Responsive Table</a></li>
-              <li><a href="#">Advanced Table</a></li>
+              <li><a href="#">Blank01</a></li>
+              <li><a href="#">Blank02</a></li>
+              <li><a href="#">Blank03</a></li>
             </ul>
           </li>
         </ul>
@@ -166,6 +166,35 @@
         <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
+              <div class="col-md-8 mt">
+                <h3>APK反编译与源码查看<br>APK &amp; Valuable</h3>
+                <hr>
+                <h5>By Anwhere Jin. <span>Date issued : 06-26-2017.</span></h5>
+                <p class="mt">最近在很多公共场合会突然听到一阵靡靡之音，不仅让人十分尴尬，也有扰乱秩序之嫌，原因是一款名叫“悄悄话查看器”的软件，坑了那些好奇心强又没有安全意识的人，安装该软件后会控制整个手机，只有关机卸载才能恢复原状，现在对该软件进行反编译…</p>
+                <p class="mt"><button class="btn btn-sm btn-trans"><a href="valuableessay/valuableapk01.html">更多详情</a></button></p>
+              </div>
+
+              <div class="col-md-4 centered">
+                <img src="img/valueable/apk01.jpg" width="300">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-8 mt">
+                <h3>Github的建立与使用<br>Git &amp; Valuable</h3>
+                <hr>
+                <h5>By Anwhere Jin. <span>Date issued : 06-24-2017.</span></h5>
+                <p class="mt">关于git和github的创建与使用，介绍基本的配置以及相关的常用命令…</p>
+                <p class="mt"><button class="btn btn-sm btn-trans"><a href="valuableessay/valuablegit01.html">更多详情</a></button></p>
+              </div>
+
+              <div class="col-md-4 centered">
+                <img src="img/valueable/github01.jpg" width="300">
+              </div>
                     
             </div>
           </div>
