V201812201000 add email js

--- a/general.html
+++ b/general.html
@@ -127,7 +127,7 @@
               <span>联系我们</span>
               </a>
             <ul class="sub">
-              <li><a href="#">Blank01</a></li>
+              <li><a href="email.html">Email</a></li>
               <li><a href="#">Blank02</a></li>
               <li><a href="#">Blank03</a></li>
             </ul>
