--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
         </div>
 
         <div class="row content-panel">
+        <div class="col-lg-10 col-lg-offset-1">
+          <div class="row">
+            <div class="col-md-8 mt">
+              <h3>Data truncation: Incorrect datetime value时间入库错误<br>MySQL &amp; Backend</h3>
+              <hr>
+              <h5>By Anwhere Jin. <span>Date issued : 11-16-2018.</span></h5>
+              <p class="mt">在开发一个网上商城时，实现保存商品的方法，无法往数据库商品表插入数据，报错信息显示插入的数据格式不对，查看日志显示为‘pdate’的格式不对…</p>
+              <p class="mt"><button class="btn btn-sm btn-trans"><a href="backendessay/backendmysql01.html">更多详情</a></button></p>
+            </div>
+
+            <div class="col-md-4 centered">
+              <img src="img/backend/backmysql01.jpg" width="300">
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-8 mt">
