--- a/index.html
+++ b/index.html
@@ -146,6 +146,24 @@
     <section id="main-content" >
       <section class="wrapper ">
         <div class="row content-panel">
+        <div class="col-lg-10 col-lg-offset-1">
+          <div class="row">
+            <div class="col-md-8 mt">
+              <h3>Access to Image from origin 'null' has been blocked by CORS policy 跨域问题<br>P5.js &amp; Frontend</h3>
+              <hr>
+              <h5>By Anwhere Jin. <span>Date issued : 12-21-2018.</span></h5>
+              <p class="mt">当我想要把上次飞线作画的例子直接展示在网站上的时候，出现了一个令人十分尴尬的问题，我的页面无法正常调用js文件，但是之前我试过P5是很好用的，这次为何迟迟加载不出画面，一直显示'Loading...'</p>
+              <p class="mt"><button class="btn btn-sm btn-trans"><a href="frontendessay/frontp5js01.html">更多详情</a></button></p>
+            </div>
+
+            <div class="col-md-4 centered">
+              <img src="img/frontend/p5js01.jpg" width="300">
+            </div>
+          </div>
+        </div>
+      </div>
+      
+        <div class="row content-panel">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-8 mt">
