V201812230919 add a time count

--- a/xstarcount.html
+++ b/xstarcount.html
@@ -160,48 +160,63 @@
         </div>
 
         <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="centered time-item">
+                <button id="btntime" class="btn btn-md btn-trans" style="background:##F2E800;line-height:49px; font-size:32px;font-family:Arial; padding:0 10px;margin-right:10px;border-radius:5px;">倒计时</button> 
+              </div>
+              <div class="centered time-item">
+                
+                <strong id="minute_show">02分</strong>
+                <strong id="second_show">00秒</strong>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="row content-panel">
         <div class="col-lg-10 col-lg-offset-1">
           <div class="row">
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第一组</p>
               <p class="mt">
                 <button id="btndela" class="btn btn-sm btn-trans">-</button>
-                <span id="btna">&nbsp;0&nbsp;</span>
+                <span id="btna" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnplusa" class="btn btn-sm btn-trans">+</button></p>
             </div>
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第二组</p>
               <p class="mt">
                 <button id="btndelb" class="btn btn-sm btn-trans">-</button>
-                <span id="btnb">&nbsp;0&nbsp;</span>
+                <span id="btnb" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnplusb" class="btn btn-sm btn-trans">+</button></p>
             </div>
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第三组</p>
               <p class="mt">
                 <button id="btndelc" class="btn btn-sm btn-trans">-</button>
-                <span id="btnc">&nbsp;0&nbsp;</span>
+                <span id="btnc" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnplusc" class="btn btn-sm btn-trans">+</button></p>
             </div>
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第四组</p>
               <p class="mt">
                 <button id="btndeld" class="btn btn-sm btn-trans">-</button>
-                <span id="btnd">&nbsp;0&nbsp;</span>
+                <span id="btnd" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnplusd" class="btn btn-sm btn-trans">+</button></p>
             </div>
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第五组</p>
               <p class="mt">
                 <button id="btndele" class="btn btn-sm btn-trans">-</button>
-                <span id="btne">&nbsp;0&nbsp;</span>
+                <span id="btne" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnpluse" class="btn btn-sm btn-trans">+</button></p>
             </div>
-            <div class="col-md-2 mt">
+            <div class="col-md-2 col-sm-4 col-xs-4 mt">
               <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第六组</p>
               <p class="mt">
                 <button id="btndelf" class="btn btn-sm btn-trans">-</button>
-                <span id="btnf">&nbsp;0&nbsp;</span>
+                <span id="btnf" style="padding-right: 3px;padding-left: 3px;">0</span>
                 <button id="btnplusf" class="btn btn-sm btn-trans">+</button></p>
             </div>
           </div>
