--- a/xstarcount.html
+++ b/xstarcount.html
@@ -178,45 +178,45 @@
         <div class="col-lg-10 col-lg-offset-1">
           <div class="row">
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第一组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第一组</p>
               <p class="mt">
                 <button id="btndela" class="btn btn-sm btn-trans">-</button>
-                <span id="btna" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btna" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnplusa" class="btn btn-sm btn-trans">+</button></p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第二组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第二组</p>
               <p class="mt">
                 <button id="btndelb" class="btn btn-sm btn-trans">-</button>
-                <span id="btnb" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btnb" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnplusb" class="btn btn-sm btn-trans">+</button></p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第三组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第三组</p>
               <p class="mt">
                 <button id="btndelc" class="btn btn-sm btn-trans">-</button>
-                <span id="btnc" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btnc" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnplusc" class="btn btn-sm btn-trans">+</button></p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第四组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第四组</p>
               <p class="mt">
                 <button id="btndeld" class="btn btn-sm btn-trans">-</button>
-                <span id="btnd" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btnd" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnplusd" class="btn btn-sm btn-trans">+</button></p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第五组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第五组</p>
               <p class="mt">
                 <button id="btndele" class="btn btn-sm btn-trans">-</button>
-                <span id="btne" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btne" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnpluse" class="btn btn-sm btn-trans">+</button></p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-4 mt">
-              <p class="mt">&nbsp;&nbsp;&nbsp;&nbsp; 第六组</p>
+              <p class="mt" style="font-size:20px;font-weight: bold;">&nbsp; 第六组</p>
               <p class="mt">
                 <button id="btndelf" class="btn btn-sm btn-trans">-</button>
-                <span id="btnf" style="padding-right: 3px;padding-left: 3px;">0</span>
+                <span id="btnf" style="padding-right: 3px;padding-left: 3px;font-size:20px;font-weight: bold;">0</span>
                 <button id="btnplusf" class="btn btn-sm btn-trans">+</button></p>
             </div>
           </div>
