--- a/index.html
+++ b/index.html
@@ -146,6 +146,24 @@
     <section id="main-content" >
       <section class="wrapper ">
         <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-8 mt">
+              <h3>Oracle DBA 操作总结<br>Oracle &amp; Backend</h3>
+              <hr>
+              <h5>By Anwhere Jin. <span>Date issued : 24-12-2018.</span></h5>
+              <p class="mt">终于有空可以做一个简单的小结了，这篇文章汇总了一下在实际工作中我使用到的Oracle DBA 常用操作，（明明是个开发人员，因为项目只有安排了我一个人，不得不什么都学习了啊 orz）…</p>
+              <p class="mt"><button class="btn btn-sm btn-trans"><a href="backendessay/backenddba01.html">更多详情</a></button></p>
+              </div>
+
+              <div class="col-md-4 centered">
+                <img src="img/backend/dba01.jpg" width="300">
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="row content-panel">
         <div class="col-lg-10 col-lg-offset-1">
           <div class="row">
             <div class="col-md-8 mt">
