V201812261103 finish frontessay for pagination

--- a/frontend.html
+++ b/frontend.html
@@ -143,13 +143,32 @@
     <!--main content start-->
     <section id="main-content">
       <section class="wrapper">
+
+      <div class="row content-panel">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-8 mt">
+              <h3>JQuery实现分页 | Pagination <br>JQuery &amp; Frontend</h3>
+              <hr>
+              <h5>By Anwhere Jin. <span>Date issued : 26-12-2018.</span></h5>
+              <p class="mt">考虑到首页的新闻版块日后会有越来越多的内容注入，所以简单利用JQuery实现了一下分页的功能，这样首页界面不会一下子堆积所有的内容版块，便于查看…</p>
+              <p class="mt"><button class="btn btn-sm btn-trans"><a href="frontendessay/frontpage01.html">更多详情</a></button></p>
+              </div>
+
+              <div class="col-md-4 centered">
+                <img src="img/frontend/pagination01.png" width="300">
+              </div>
+            </div>
+          </div>
+        </div>
+
       <div class="row content-panel">
         <div class="col-lg-10 col-lg-offset-1">
           <div class="row">
             <div class="col-md-8 mt">
               <h3>Access to Image from origin 'null' has been blocked by CORS policy 跨域问题<br>P5.js &amp; Frontend</h3>
               <hr>
-              <h5>By Anwhere Jin. <span>Date issued : 12-21-2018.</span></h5>
+              <h5>By Anwhere Jin. <span>Date issued : 21-12-2018.</span></h5>
               <p class="mt">当我想要把上次飞线作画的例子直接展示在网站上的时候，出现了一个令人十分尴尬的问题，我的页面无法正常调用js文件，但是之前我试过P5是很好用的，这次为何迟迟加载不出画面，一直显示'Loading...'</p>
               <p class="mt"><button class="btn btn-sm btn-trans"><a href="frontendessay/frontp5js01.html">更多详情</a></button></p>
             </div>
