V201812281632 add a new frontend essay

--- a/frontend.html
+++ b/frontend.html
@@ -162,6 +162,24 @@
           </div>
         </div>
 
+      <div class="row content-panel pagetion1">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="row">
+              <div class="col-md-8 mt">
+              <h3>用五分钟快速写一个用于活动的倒计时+计分板的DEMO<br>JS &amp; Frontend</h3>
+              <hr>
+              <h5>By Anwhere Jin. <span>Date issued : 25-12-2018.</span></h5>
+              <p class="mt">最近去一个活动现场帮忙，实际上是去结结实实体验了一把导播的滋味，从现场回来整个人都累趴了，LED舞台音频视频准备，VCR剪辑，PPT制作，舞台布置，舞台导播…</p>
+              <p class="mt"><button class="btn btn-sm btn-trans"><a href="frontendessay/frontendxstar01.html">更多详情</a></button></p>
+              </div>
+
+              <div class="col-md-4 centered">
+                <img src="img/frontend/xstarcount01.jpg" width="300">
+              </div>
+            </div>
+          </div>
+        </div>
+
       <div class="row content-panel">
         <div class="col-lg-10 col-lg-offset-1">
           <div class="row">
